updated last seen feature, realtime DB channel and timeintervals every 10 seconds to add that user online that's 100k requests every 10 seconds for 100k users , add dark/light modes, add color contrast check for messages random color, fixed an error where components rerendered a lot due to faulty if statement, added new color; black - MainBlackfr

--- a/src/App.css
+++ b/src/App.css
@@ -8,6 +8,8 @@
   -moz-osx-font-smoothing: grayscale;
   font-family: 'Open Sans', sans-serif;
   font-weight: 400;
+  transition: all 150ms;
+  color: var(--MainBlack);
   text-rendering: optimizeLegibility;
 }
 body {
@@ -23,6 +25,7 @@ body {
   --MainSky: 83, 216, 251;
   --MainPinkishWhite: 220, 225, 233;
   --Mainpink: 212, 175, 185;
+  --MainBlackfr: 0 ,0 ,0;
 }
 
 
